# memy

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.rs  install.sh  memy.plugin.zsh
.github/: copilot-instructions.md
.github/workflows/: check-conventional-commit.yml  codeql.yml  release-packages.yml  release-please.yml  render-logo.yml  rust.yml  tests.yml
.rpm/: memy.spec
Formula/: memy.rb
aur/: PKGBUILD
aur/memy/: .SRCINFO  PKGBUILD
aur/memy-bin/: .SRCINFO  PKGBUILD
benches/: benches.rs
config/: template-memy.toml  template-memy.toml.tmpl
demos/: Dockerfile  Makefile  script.md
hooks/: bash  fish.fish  lfrc  neovim.lua  ranger.rc.conf  vim.vim  zsh
plugins/: lfrc
src/: cli.rs  config.rs  db.rs  denylist_default.rs  frecency.rs  hooks.rs  import.rs  list.rs  logging.rs  main.rs  note.rs  open.rs  plugins_generated.rs  query.rs  stats.rs  types.rs  utils.rs  z.rs
src/utils/: cli.rs  config.rs  db.rs  denylist_default.rs  frecency.rs  graphs.rs  logging.rs  mod.rs  output.rs  output_filter.rs  path.rs  query.rs  search.rs  time.rs  types.rs
tests/: basic.rs  config.rs  config_override.rs  deletion.rs  denylist.rs  generate-config.rs  hooks.rs  import.rs  list_search.rs  list_select.rs  missing-files.rs  newer-than.rs  normalize-symlinks.rs  open.rs  plugins.rs  recency_bias.rs  stats.rs  support.rs  symlinks.rs  tests.rs  type-change.rs  unusual-paths.rs  z.rs
