[package]
name = "memy"
version = "0.8.0"
edition = "2021"
authors = ["Andrew Ferrier <andrew.ferrier@example.com>"]
description = "Track and recall frequently and recently used files or directories."
license = "MIT"
repository = "https://github.com/andrewferrier/memy"
readme = "README.md"
keywords = ["cli", "file-tracking"]
categories = ["Command line utilities"]

[dependencies]
chrono = "0.4.41"
clap = { version = "4.5", default-features = false, features = [
    "derive",
    "help",
] }
clap_complete = "4.5.55"
config = { version = "0.15.13", default-features = false, features = [
    "json5",
    "toml",
] }
env_logger = { version = "0.11", default-features = false }
home = "0.5.11"
ignore = "0.4"
log = "0.4.27"
rusqlite = { version = "0.37", default-features = false, features = [
    "bundled",
] }
serde = "1.0.219"
serde_json = "1.0.143"
toml = "0.9.2"
xdg = { version = "3.0.0", default-features = false }

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"

[build-dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5.55"
clap_mangen = "0.2.29"

[profile.release]
lto = true
codegen-units = 1

[package.metadata.deb]
maintainer = "Andrew Ferrier <andrew.ferrier@example.com>"
depends = ""
license-file = ["LICENSE"]
assets = [
    [
        "target/release/memy",
        "/usr/bin/",
        "755",
    ],
    [
        "README.md",
        "/usr/share/doc/memy/README.md",
        "644",
    ],
    [
        "CHANGELOG.md",
        "/usr/share/doc/memy/CHANGELOG.md",
        "644",
    ],
]

[lints.clippy]
cargo = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# restriction = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }

cast_precision_loss = "allow"
multiple_crate_versions = "allow"

shadow_reuse = "warn"
shadow_same = "warn"
shadow_unrelated = "warn"
unwrap_used = "warn"
unused_result_ok = "warn"
